fix username overflow

--- a/client/src/css/OrderHistory.css
+++ b/client/src/css/OrderHistory.css
@@ -7,6 +7,7 @@
     font-size: calc(10px + 2vmin);
     color: white;  
     min-height: 100vh;
+    overflow-wrap: break-word;
 }
 
 #username {
